update /s3/temp/:name
